@@ -121,7 +121,7 @@ int setenv(FAR const char *name, FAR const char *value, int overwrite)
         }
     }
 
-  /* Get a reference to the thread-private environ in the TCB.*/
+  /* Get a reference to the thread-private environ in the TCB. */
 
   sched_lock();
   rtcb  = (FAR struct tcb_s*)g_readytorun.head;
@@ -202,6 +202,4 @@ errout:
 }
 
 #endif /* CONFIG_DISABLE_ENVIRON */
-
-
 
