@@ -87,4 +87,5 @@ pid_t wait(FAR int *stat_loc)
   return waitpid((pid_t)-1, stat_loc, 0);
 }
 
-#endif /* CONFIG_SCHED_WAITPID && CONFIG_SCHED_HAVE_PARENT*/
+#endif /* CONFIG_SCHED_WAITPID && CONFIG_SCHED_HAVE_PARENT */
+
